kubernetes/config/security-policies.yaml
# Network Policy to restrict pod communicationl
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: 
  name: microservices-policy
  namespace: banking
spec:
  podSelector:
    matchLabels: 
      app: account-service
  policyTypes:
    - Ingress
    - Egress
  ingress:
  - from:
    - podSelector:
      matchLabels:
        app: auth-service
    ports:
    - protocol: TCP
      port: 8080
  egress:
  - to:
    - ipBlock:
        cidr: "10.2.1.0/24" # Data VPC AZ1 
    - ipBlock:
        cidr: "10.2.2.0/24" # Data VPC AZ2

---

# Pod Security Policy
apiVersion: pod-security.kubernetes.io/v1
kind: Pod
metadata: 
  name: security-context
  namespace: banking
spec: 
  securityContext:
    runAsNonRoot: true
    runAsUser: 1000
    fsGroup: 2000
  automountServiceAccountToken: false
